Alignment fix + implement flex video: Fixes #105, Fixes #142

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -407,3 +407,7 @@ h6~.subheader { position: relative; bottom:  8px;}
     float: right;
     padding-right: 0.9375rem;
 }
+
+.video-fix {
+    margin: 0 -6.25% !important;
+}
